# lightweight-etl-pipeline-to-gcp

./: .env.example  .gitignore  README.md  dados_api_empregados.xlsx  pyproject.toml  rataria.py  ~$dados_api_empregados.xlsx
data/: sample_employees.csv  test_employees.csv
src/: config.py
src/1-data_sources/: faker_generator.py
src/bigquery/: bigquery_loader.py  bigquery_loader_old.py
src/config/: settings.py
src/data_processing/: data_masking.py  data_validator.py
src/data_sources/: api_extractor.py  csv_extractor.py
src/orchestration/: pipeline_runner.py
src/storage/: gcs_uploader.py
tests/: test_data_validator.py
